CSS 2.1 failure: Word-spacing affects each space and non-breaking space https://bugs.webkit.org/show_bug.cgi?id=89826

Reviewed by Eric Seidel.

Source/WebCore:

Add word spacing to consecutive spaces in a run per http://www.w3.org/TR/CSS21/text.html#spacing-props.

Test: fast/css/word-spacing-characters.html
      fast/css/word-spacing-characters-complex-text.html
      fast/css/word-spacing-characters-linebreak.html
      css2.1/20110323/word-spacing-characters-002.htm
      css2.1/20110323/word-spacing-characters-003.htm
      css2.1/20110323/word-spacing-remove-space-001.htm
      css2.1/20110323/word-spacing-remove-space-002.htm
      css2.1/20110323/word-spacing-remove-space-003.htm
      css2.1/20110323/word-spacing-remove-space-004.htm
      css2.1/20110323/word-spacing-remove-space-005.htm
      css2.1/20110323/word-spacing-remove-space-006.htm
      css2.1/20110323/c541-word-sp-001.htm

* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::advance): All spaces (ordinary space or &nbsp;) get word-spacing added, even
  if they are consecutive.
* platform/graphics/harfbuzz/HarfBuzzShaperBase.cpp:
(WebCore::HarfBuzzShaperBase::isWordEnd): ditto, but for the complex text case on Chromium. Had to use
  m_run rather than m_normalizedBuffer here as m_normalizedBuffer turns tabs into spaces! Unlike the simple
  text path, '\n' gets word-spacing - I observed this from fast/text/atsui-spacing-features.html but can't
  find it specified anywhere.
* platform/graphics/harfbuzz/HarfBuzzShaperBase.h:
(WebCore::HarfBuzzShaperBase::isCodepointSpace):
* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances): ditto, but for the complext text case on Mac.
   The change to this file is speculative, I don't have a Mac build.
* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::LineBreaker::nextLineBreak): Tested by word-spacing-linebreak.html
* rendering/RenderText.cpp:
(WebCore::RenderText::widthFromCache): This code-path is not covered by any existing layout tests!
  I've tried to come up with a test to hit it but have failed.

LayoutTests:

* css2.1/20110323/c541-word-sp-001-expected.html: Added.
* css2.1/20110323/c541-word-sp-001.htm: Added.
  Replaces t1604-c541-word-sp-01-b-a.html below.
* css2.1/20110323/word-spacing-characters-002-expected.html: Added.
* css2.1/20110323/word-spacing-characters-002.htm: Added.
* css2.1/20110323/word-spacing-characters-003-expected.html: Added.
* css2.1/20110323/word-spacing-characters-003.htm: Added.
  These passed already.
* css2.1/20110323/word-spacing-remove-space-001-expected.html: Added.
* css2.1/20110323/word-spacing-remove-space-001.htm: Added.
* css2.1/20110323/word-spacing-remove-space-002-expected.html: Added.
* css2.1/20110323/word-spacing-remove-space-002.htm: Added.
* css2.1/20110323/word-spacing-remove-space-003-expected.html: Added.
* css2.1/20110323/word-spacing-remove-space-003.htm: Added.
* css2.1/20110323/word-spacing-remove-space-004-expected.html: Added.
* css2.1/20110323/word-spacing-remove-space-004.htm: Added.
* css2.1/20110323/word-spacing-remove-space-005-expected.html: Added.
* css2.1/20110323/word-spacing-remove-space-005.htm: Added.
* css2.1/20110323/word-spacing-remove-space-006-expected.html: Added.
* css2.1/20110323/word-spacing-remove-space-006.htm: Added.
  These 6 tests are fixed by this patch.
* css2.1/t1604-c541-word-sp-01-b-a.html: Removed.
  Per http://lists.w3.org/Archives/Public/public-css-testsuite/2010Jan/0029.html t1604-c541-word-sp-01-b-a.htm is
  now invalid and has been replaced by c541-word-sp-001.htm above.
* fast/css/word-spacing-characters-complex-text-expected.html: Added.
* fast/css/word-spacing-characters-complex-text.html: Added.
  This is a complex text version of word-spacing-characters-001.htm
* fast/css/word-spacing-characters-expected.html: Added.
* fast/css/word-spacing-characters.html: Added.
  The original test (word-spacing-characters-001.htm) has two spaces between the non-breaking spaces in the second last case.
  This causes WebKit to split the text into two-runs and drop the second of the two spaces. This entire test can be replaced
  with word-spacing-characters-001.htm from the css test suite when https://bugs.webkit.org/show_bug.cgi?id=89827 is fixed.
* fast/css/word-spacing-linebreak-expected.html: Added.
* fast/css/word-spacing-linebreak.html: Added.
* platform/chromium-linux/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/chromium-linux/fast/css/word-space-extra-expected.png:
* platform/chromium-mac-snowleopard/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/chromium-mac/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/chromium-win/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/chromium-win/css2.1/t1604-c541-word-sp-01-b-a-expected.txt: Removed.
* platform/chromium-win/fast/css/word-space-extra-expected.txt:
* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/efl/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/efl/css2.1/t1604-c541-word-sp-01-b-a-expected.txt: Removed.
* platform/gtk/TestExpectations:
* platform/gtk/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/gtk/css2.1/t1604-c541-word-sp-01-b-a-expected.txt: Removed.
* platform/mac/TestExpectations:
* platform/mac/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/mac/css2.1/t1604-c541-word-sp-01-b-a-expected.txt: Removed.
* platform/qt/TestExpectations:
* platform/qt/css2.1/t1604-c541-word-sp-01-b-a-expected.png: Removed.
* platform/qt/css2.1/t1604-c541-word-sp-01-b-a-expected.txt: Removed.

Canonical link: https://commits.webkit.org/111705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125430 268f45cc-cd09-0410-ab3c-d52691b4dbfc