third_party/WebKit/Source/WebCore/platform/graphics/harfbuzz/HarfBuzzShaperBase.h
@@ -34,6 +34,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "TextRun.h"
 #include <wtf/OwnArrayPtr.h>
+#include <wtf/unicode/CharacterNames.h>
 
 namespace WebCore {
 
@@ -58,8 +59,8 @@ protected:
     // WebKit uses this to justify text.
     void setPadding(int);
 
-    // This matches the logic in RenderBlock::findNextLineBreak
-    static bool isCodepointSpace(UChar c) { return c == ' ' || c == '\t'; }
+    // In complex text word-spacing affects each line-break, space (U+0020) and non-breaking space (U+00A0).
+    static bool isCodepointSpace(UChar c) { return c == ' ' || c == noBreakSpace || c == '\n'; }
 
     const Font* m_font;
     OwnArrayPtr<UChar> m_normalizedBuffer;
